tmp/kyverno-policies/disallow-long-lived-serviceaccount-secrets.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-long-lived-serviceaccount-secrets
  annotations:
    policies.kyverno.io/title: Disallow Long-lived ServiceAccount Secrets
    policies.kyverno.io/category: Security
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.11.1
    kyverno.io/kubernetes-version: "1.27"
    policies.kyverno.io/subject: Secret,ServiceAccount
    policies.kyverno.io/description: >-
      Before version 1.24, Kubernetes automatically generated Secret-based tokens 
      for ServiceAccounts. To distinguish between automatically generated tokens 
      and manually created ones, Kubernetes checks for a reference from the 
      ServiceAccount's secrets field. If the Secret is referenced in the secrets 
      field, it is considered an auto-generated legacy token. These legacy Tokens can
      be of security concern and should be audited.      
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: deny-secrets
      skipBackgroundRequests: true
      match:
        any:
        - resources:
            kinds:
              - ServiceAccount
      validate:
        allowExistingViolations: true
        message: "Long-lived API tokens are not allowed."
        pattern:
          X(secrets):
